# ftx-omx

./: .gitignore  BUILD  Dockerfile  README.md  WORKSPACE  go.mod  go.sum  main.go  makefile
docs/api/: account_api_guide.md  order_api_guide.md  order_handling.md
docs/dev/: CIRA.md  component_model.md  go_bazel_depenencies.md  memory_profile.txt  ngrok_local_tunnel.txt
docs/orders/: ftx-orders.md
scripts/db/: db_configure.sh
scripts/deploy/: configure_gloud.sh  deploy.sh  teardown.sh
scripts/dev/: build.sh  rebuild.sh  run.sh  update_deps.sh
scripts/docker/: image_build.sh  image_hard_reset.sh  image_push.sh  image_remove.sh  image_replace.sh  image_run.sh
scripts/setup/: check_requirements.sh  cloud_setup.sh  gen_keys.sh
src/cfg/: BUILD.bazel  crypto_config.go  db_config.go  dbg_flags.go  main_config.go
src/clients/pgdb/: BUILD.bazel  pgdb_client.go
src/cmd/: BUILD.bazel  main.go  main_utils.go
src/components/: NewComponent.sh
src/components/account_manager/: BUILD.bazel  account_manager.go
src/components/account_manager/v1/: BUILD.bazel  account_manager.go  deps.go  flags.go  init.go  state.go  workflow.go
src/components/api_manager/: BUILD.bazel  api_manager.go
src/components/api_manager/v1/: BUILD.bazel  api_manager.go  deps.go  flags.go  init.go  state.go  workflow_api.go  workflow_monitor.go
src/components/component_manager/: BUILD.bazel  component_manager.go
src/components/component_manager/v1/: BUILD.bazel  component_manager.go  deps.go  flags.go  init.go  workflow.go
src/components/crypto_manager/: BUILD.bazel  crypto_manager.go
src/components/crypto_manager/v1/: BUILD.bazel  crypto_manager.go  flags.go  init.go  workflow.go
src/components/data_manager/: BUILD.bazel  data_manager.go
src/components/data_manager/v1/: BUILD.bazel  data_manager.go  deps.go  flags.go  init.go  state.go  workflow_api.go  workflow_error.go  workflow_order.go  workflow_order_fill.go  workflow_utils.go
src/components/order_manager/: BUILD.bazel  order_manager.go
src/components/order_manager/v1/: BUILD.bazel  deps.go  flags.go  init.go  order_manager.go  state.go  utils_math.go  utils_order.go  utils_price.go  utils_size.go  workflow_book_order.go  workflow_limit_order.go  workflow_map_reset.go  workflow_trailing_order.go  workflow_trigger_order.go
src/service/: BUILD.bazel  service.go
src/service/v1/: BUILD.bazel  const.go  flags.go  http_handlers_api.go  http_handlers_order_book.go  http_handlers_order_limit.go  http_handlers_order_trailing_stop.go  http_handlers_order_trigger.go  http_handlers_switches.go  http_handlers_sys.go  http_handlers_trading_view.go  http_handlers_utils.go  init.go  initComponents.go  initDB.go  initHttp.go  initHttpAccount.go  initHttpOrder.go  initHttpSys.go  init_monitoring.go  init_utils.go  init_verify.go  json_utils.go  monitor.go  serve.go  service.go  state.go  stop.go  utils.go
src/types/: BUILD.bazel  api.go  env.go  ftx_book_order.go  ftx_error.go  ftx_fill.go  ftx_order.go  ftx_order_book_price_type_enum.go  ftx_order_book_side_enum.go  ftx_trailing_order.go  ftx_trigger_order.go  leverage.go  main_config.go  price.go  sync_map.go
src/utils/crypto/: BUILD.bazel  crypto_utils.go
src/utils/dbg/: BUILD.bazel  dbg.go  dbg_log.go  dbg_requests.go  dbg_response.go  dbg_structs.go  dbg_utils.go
