load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "main_utils.go",
    ],
    importpath = "web_socket/src/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//src/components/crypto_manager",
        "//src/types",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
