load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "account_manager",
    srcs = ["account_manager.go"],
    importpath = "ftx-omx/src/components/account_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//src/components/account_manager/v1:account_manager",
        "//src/components/api_manager",
        "@com_github_go_numb_go_ftx//rest",
    ],
)
