load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "component_manager",
    srcs = ["component_manager.go"],
    importpath = "web_socket/src/components/component_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//src/clients/pgdb",
        "//src/components/account_manager",
        "//src/components/api_manager",
        "//src/components/component_manager/v1:component_manager",
        "//src/components/crypto_manager",
        "//src/components/data_manager",
        "//src/components/order_manager",
    ],
)
