load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "data_manager",
    srcs = ["data_manager.go"],
    importpath = "web_socket/src/components/data_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//src/clients/pgdb",
        "//src/components/crypto_manager",
        "//src/components/data_manager/v1:data_manager",
        "//src/types",
    ],
)
