load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "const.go",
        "flags.go",
        "http_handlers_api.go",
        "http_handlers_order_book.go",
        "http_handlers_order_limit.go",
        "http_handlers_order_trailing_stop.go",
        "http_handlers_order_trigger.go",
        "http_handlers_switches.go",
        "http_handlers_sys.go",
        "http_handlers_trading_view.go",
        "http_handlers_utils.go",
        "init.go",
        "initComponents.go",
        "initDB.go",
        "initHttp.go",
        "initHttpAccount.go",
        "initHttpOrder.go",
        "initHttpSys.go",
        "init_monitoring.go",
        "init_utils.go",
        "init_verify.go",
        "json_utils.go",
        "monitor.go",
        "serve.go",
        "service.go",
        "state.go",
        "stop.go",
        "utils.go",
    ],
    importpath = "ftx-omx/src/service/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//src/cfg",
        "//src/clients/pgdb",
        "//src/components/account_manager",
        "//src/components/api_manager",
        "//src/components/component_manager",
        "//src/components/order_manager",
        "//src/types",
        "//src/utils/crypto",
        "//src/utils/dbg",
        "@com_github_golang_gddo//httputil/header",
        "@com_github_soheilhy_cmux//:cmux",
        "@org_golang_x_sync//errgroup",
    ],
)
