load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api_manager",
    srcs = [
        "api_manager.go",
        "deps.go",
        "flags.go",
        "init.go",
        "state.go",
        "workflow_api.go",
        "workflow_monitor.go",
    ],
    importpath = "ftx-omx/src/components/api_manager/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//src/cfg",
        "//src/components/data_manager",
        "//src/types",
        "//src/utils/dbg",
        "@com_github_go_numb_go_ftx//realtime",
    ],
)
