load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "crypto_manager",
    srcs = [
        "crypto_manager.go",
        "flags.go",
        "init.go",
        "workflow.go",
    ],
    importpath = "ftx-omx/src/components/crypto_manager/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//src/cfg",
        "//src/utils/crypto",
        "//src/utils/dbg",
    ],
)
